fix errors with VA not showing details and also addtoexhibition for VA objects

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@
 .added-confirmation-message,
 .remove-item-confirmation {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   color: #fff;
@@ -66,7 +66,7 @@
   text-align: center;
   font-size: 1.2rem;
   z-index: 99;
-  animation: fadeOut 2s ease-out 1s forwards;
+  animation: fadeOut 1.5s ease-out 1s forwards;
 }
 
 @keyframes fadeOut {
@@ -316,4 +316,13 @@
 
 .modal img {
   width: 100%;
+}
+
+/* loading stuff*/
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
 }
